--- a/dep_yamls/p1/19.2/samplecron.yaml
+++ b/dep_yamls/p1/19.2/samplecron.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: hello
+  name: hello-naga
 spec:
   schedule: "*/20 * * * *"
   jobTemplate:
