--- a/dep_yamls/p2/19.1/samplecron.yaml
+++ b/dep_yamls/p2/19.1/samplecron.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: hello-app
+  name: hello-app1
 spec:
   schedule: "*/20 * * * *"
   jobTemplate:
